add apis for workspace hierarchy
